kubernetes/deployment.yml
# Creating MLflow deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codification-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: codification-api
  template:
    metadata:
      labels:
        app: codification-api
    spec:
      containers:
        - name: api
          image: ahmed577/PrimePredict:main
          imagePullPolicy: Always
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
