kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: prime-api-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: prime-api
